--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -16,10 +16,12 @@ header .container {
   justify-content: center;
   align-items: center;
 }
+
 .navigation-link a {
   position: relative;
 }
-.navigation-link a::before {
+
+/* .navigation-link a::before {
   content: "";
   position: absolute;
   transition: 0.8;
@@ -35,7 +37,7 @@ header .container {
   height: 2px;
   background-color: rgb(14, 224, 59);
   transition: 0.9s;
-}
+}  */
 .navigation-link a {
   font-size: 14px;
   font-weight: 700;
@@ -51,7 +53,7 @@ header .container {
 }
 
 .btn {
-  user-select: none;
+
   display: inline-block;
   background: #12151e none repeat scroll 0 0;
   border: 2px solid #e4d804;
@@ -62,10 +64,10 @@ header .container {
   margin-bottom: 0;
   text-align: center;
   text-transform: uppercase;
-  touch-action: manipulation;
+
   transition: all 0.3s ease 0s;
   vertical-align: middle;
-  white-space: nowrap;
+
   max-width: 200px;
   color: #fff;
   font-size: 14px;
@@ -108,4 +110,33 @@ header .container {
 
 header .nav-link {
   display: none;
+}
+
+.navigation-link {
+  position: relative;
+}
+
+.submenu {
+  position: absolute;
+  left: 25px;
+  top: 90px;
+  background-color: #141413;
+  z-index: 1000;
+  opacity: 0;
+  min-width: 230px;
+  border: 1px solid #283846;
+  background: #1b252e;
+  box-shadow: 0px 30px 70px 0px rgb(26 36 45 / 59%);
+  transition: 0.7s;
+}
+
+.submenu a {
+  width: 200px;
+  padding: 18px 23px;
+  text-transform: capitalize;
+}
+
+.navigation-link:hover .submenu {
+  opacity: 1;
+  transform: scale(1);
 }
