--- a/src/Components/Pricing/PriceModel/PriceModel.css
+++ b/src/Components/Pricing/PriceModel/PriceModel.css
@@ -61,7 +61,9 @@
   transition: 0.3s linear;
   width: 60%;
 }
-
+.pricing-box:nth-child(2) {
+  position: relative;
+}
 .pricing-box:hover {
   border-radius: 4px;
   border-color: #b4a729;
@@ -181,4 +183,158 @@
   background-color: #e4d804;
   color: #20212b;
   border-color: #20212b;
+}
+
+.modal-overlays {
+  padding: 30px;
+  background-color: #1a191f;
+  margin: 0 auto;
+
+  max-width: 349px;
+  border: none;
+  border-radius: 8px;
+  position: absolute;
+  top: -12px;
+  left: -12px;
+  bottom: -12px;
+  right: -12px;
+}
+.close-buttonModal {
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 1;
+  background: transparent;
+  font-size: 20px;
+  height: 24px;
+  top: 30px;
+  right: 20px;
+  border: none;
+}
+.close-buttonModal :hover {
+  color: #000000;
+}
+.close-buttonModal svg {
+  background-color: #f9ab00;
+}
+
+
+
+.modal-content h4 {
+  font-weight: 400;
+  color: #fff;
+  font-size: 24px;
+  line-height: 100%;
+  margin-bottom: 20px;
+}
+
+.modal-content .inputGroup {
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.modal-content .inputGroup input {
+  background-color: #222028;
+  border: 2px solid transparent;
+  height: 46px;
+  color: #fff;
+  font-size: 16px;
+  width: 100%;
+  border-radius: 8px;
+  padding: 0 20px;
+  margin-top: 10px;
+}
+.modal-content .inputGroup input:focus {
+  border-color: #b64444;
+}
+.modal-content .inputGroup label {
+  font-size: 14px;
+  line-height: 100%;
+  color: #c0c0c0;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.modal-content .selectGroup {
+  background: url(../img/angle-down.svg) no-repeat center right 20px #222028;
+  background-size: 20px auto;
+  border: 2px solid transparent;
+  border-radius: 8px;
+  height: 46px;
+  position: relative;
+  color: #fff;
+  font-size: 16px;
+  width: 100%;
+  padding: 0 20px;
+  cursor: pointer;
+}
+
+
+.modal-content .txt-modal {
+  display: block;
+  margin-top: 15px;
+  font-size: 14px;
+  line-height: 24px;
+  color: #fff;
+  margin-bottom: 15px;
+}
+
+.payment-method {
+  margin-bottom: 20px;
+  width: 100%;
+}
+.payment-method p {
+  margin: 15px 0;
+}
+.payment-method label {
+  color: #c0c0c0;
+  font-size: 14px;
+  line-height: 100%;
+  color: #c0c0c0;
+  width: 100%;
+  margin-bottom: 15px;
+}
+.payment-method p label {
+  position: relative;
+  margin-left: 7px;
+  color: #c0c0c0;
+}
+.payment-method label ::before {
+  border-color: #f9ab00;
+  content: "";
+  display: block;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border: 4px solid #222028;
+  background-color: transparent;
+  border-radius: 50%;
+  left: 0;
+  top: 0;
+  transition: border-color 0.4s ease;
+}
+.payment-method label input {
+  color: #f9ab00;
+}
+
+.btn-Proceed {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 46px;
+  width: 100%;
+  border-radius: 8px;
+  background-color: transparent;
+  font-size: 14px;
+  color: #fff;
+  text-transform: uppercase;
+  border: 2px solid #f9ab00;
+  margin-top: 10px;
+}
+.btn-Proceed span a {
+  color: #fff;
 }
